syntax = "proto3";

// python -m grpc_tools.protoc -I. --python_out=vgrpc/ --pyi_out=vgrpc/ --grpc_python_out=vgrpc/ worker.proto

message TaskNameAndCode {
  string name = 1;
  bytes serialized_task = 2;
}

message IdTaskArgs {
  int32 id = 1;
  string name = 2;
  bytes args = 3;
}

/* Status
0 - success
1 - ExecutionError
2 - SerializationError
3 - DataNotFound
*/
message Status {
  int32 status = 1;
}

message DataRef {
  string dataref = 1;
}

message StatusWithDataRef {
  int32 status = 1;
  string dataref = 2;
}

message Data {
  bytes serialized_data = 1;
}

message StatusWithData {
  int32 status = 1;
  bytes serialized_data = 2;
}

message Empty {
}